--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(test_problem)
 
 # Project Settings
 # ----------------
-set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_VERBOSE_MAKEFILE OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -12,7 +13,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # C++ compillation flags
 # ----------------------
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wpedantic -Werror -Wall -Wextra -Wextra-semi -Wsign-compare")
 
 # Build type flags
@@ -29,6 +32,18 @@ if(WITH_SANS)
 endif()
 unset(WITH_SANS CACHE)
 
+
+function(add_clang_tidy_target TARGET_NAME TARGET_FILES)
+    add_custom_target(
+        clang-tidy-${TARGET_NAME}
+        COMMAND clang-tidy
+        -header-filter=.*
+        -warnings-as-errors=*
+        -p .
+        ${TARGET_FILES}
+        --
+    )
+endfunction()
 
 # Sources
 # -------
