--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,15 @@
 cmake_minimum_required(VERSION 3.20)
 project(shad_algorithms_part_2)
 
-# Contest 0
-add_subdirectory(c0_a)
-add_subdirectory(c0_b)
-# add_subdirectory(c0_c)
-# add_subdirectory(c0_d)
+
+function(add_all_subdirectories)
+    file(GLOB V_GLOB LIST_DIRECTORIES true "*")
+    foreach(item ${V_GLOB})
+        if(IS_DIRECTORY ${item})
+            add_subdirectory(${item})
+        endif()
+    endforeach()
+endfunction()
+
+
+add_all_subdirectories()
